# mlflow-monitor

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  plan.md  pyproject.toml  spec.md
.codex/skills/commit-discipline/: SKILL.md
.codex/skills/seeking-design-truth/: SKILL.md
.codex/skills/tdd/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/arch_v0/: mlflow_monitor_architecture_flowchart.md  mlflow_monitor_product_runtime.excalidraw  mlflow_monitor_product_runtime.md  mlflow_monitor_runtime_sequence.md  mlflow_monitor_system_architecture.excalidraw
demo/: README.md  __init__.py  run_monitoring.py  setup.py
demo/seed_assets/baseline/: eval.csv  train.csv
demo/seed_assets/comparable_candidate/: eval.csv  train.csv
docs/: architecture.md  worldview.md
docs/security/: dependabot_vulnerability_review_2026-05-27.md
docs/site/: Makefile
docs/v0/: acceptance_v0.md  cast_v0.md  design_doc_v0.md  m1_closeout_v0.md  mlflow_glossary_v0.md  mlflow_mapping_v0.md  mvp_design_v0.md  nxt_5_tickets_3_17.md  plane_import_updated.csv  recipe_v0.md  remain_m1_tickets_3_20.md  system_sketch_v0.md  ticket_breakdown_v0.md  tickets_m1_v0.md  workflow_v0.md
src/mlflow_monitor/: __init__.py  cli.py  contract.py  contract_checker.py  domain.py  errors.py  gateway.py  invariant.py  mlflow_client.py  mlflow_gateway.py  monitor.py  orchestration.py  recipe.py  recipe_compiler.py  result_contract.py  workflow.py
tests/: test_cli.py  test_contract.py  test_contract_checker.py  test_demo_setup.py  test_domain_contract_resolution.py  test_domain_models.py  test_gateway.py  test_invariant.py  test_mlflow_client.py  test_mlflow_client_boundary.py  test_mlflow_client_unit.py  test_mlflow_gateway_unit.py  test_monitor.py  test_recipe.py  test_recipe_compiler.py  test_result_contract.py  test_smoke.py  test_workflow.py
tests/demo/: test_demo_setup.py
tests/integration/: conftest.py  test_mlflow_client.py  test_mlflow_gateway.py  test_monitor_api.py  test_monitor_sdk.py
(+46 files in other folders)
