[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlflow-monitor"
version = "0.1.0"
description = "MLflow experiment monitoring and alerting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlflow",
    "pandas",
    "scipy",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mlflow_monitor"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mlflow_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
