[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlflow-monitor"
version = "0.1.0"
description = "Baseline-aware model monitoring for MLflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]
demo = [
    "scikit-learn",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mlflow_monitor"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "D",   # pydocstyle
]
ignore = []


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",
]

[tool.ruff.lint.isort]
known-first-party = ["mlflow_monitor"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v"
markers = [
    "demo: tests that exercise the repo-level demo and require the demo extra",
]
